<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_enable_bt"
          android:title="@string/action_enable_bt"
          app:showAsAction="never"/>

    <item android:id="@+id/action_select_device"
          android:title="@string/action_select_device"
          app:showAsAction="never"/>

    <item android:id="@+id/action_connect"
          android:title="@string/action_connect"
          app:showAsAction="never"/>

    <item android:id="@+id/action_disconnect"
          android:title="@string/action_disconnect"
          app:showAsAction="never"/>

    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          app:showAsAction="never"/>

</menu>